--- a/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
@@ -33,47 +33,43 @@ Dag Toft Børresen Pedersen\\
 
 %styring
 \chapter{Projectplanning}
-\input{indhold/planning/intoprojectplanning.tex}
-\input{indhold/planning/Administration.tex}
-\input{indhold/planning/Workcoordinating.tex}
-\input{indhold/planning/timeschedule.tex}
-\input{indhold/planning/Log.tex}
-\input{indhold/planning/decisionmaking.tex}
+\input{ProjectPlanning/introprojectplanning.tex}
+\input{ProjectPlanning/Administration.tex} 		%DONE
+\input{ProjectPlanning/WorkCoordinating.tex}	%DONE
+\input{ProjectPlanning/timeschedule.tex}
+\input{ProjectPlanning/DecisionMaking.tex} 		%DONE
 
 %gruppen
 \chapter{Group Work}
-\input{indhold/group/groupintro.tex}
-\input{indhold/group/valuesandvisionsgroupcollaboration.tex}
-\input{indhold/group/groupcontract.tex}
-\input{indhold/group/roles.tex}
+\input{GroupWork/groupintro.tex}
+\input{GroupWork/GroupContract.tex}				%DONE
+\input{GroupWork/roles.tex}
 %\input{indhold/group/conflicthandling.tex}
-\input{indhold/group/meetingculture.tex}
-\input{indhold/group/MorningmeetingsandFridaysmeetings.tex}
-\input{indhold/group/summary.tex}
-\input{indhold/group/OBHmodellen.tex}
+\input{GroupWork/meetingculture.tex}
+\input{GroupWork/MorningmeetingsandFridaysmeetings.tex}
+\input{GroupWork/summary.tex}
+\input{GroupWork/OBHmodellen.tex}
 
 
 
 %vejleder
 \chapter{Collaboration with Supervisors}
-\input{indhold/supervisor/introsupervisor.tex}
-\input{indhold/supervisor/valuesvisionsandprofessionalcontact.tex}
-\input{indhold/supervisor/supervisors.tex}
-\input{indhold/supervisor/Supervisortypology.tex}
+\input{CollaborationWithSupervisors/introsupervisor.tex}
+\input{CollaborationWithSupervisors/supervisors.tex}
 
 
 
 
 %læringsprocess
 \chapter{Process of Learning}
-\input{indhold/learn/introlearn.tex}
-\input{indhold/learn/valuesandvisionslearningprocess.tex}
-\input{indhold/learn/goalsofthissemester.tex}
-\input{indhold/learn/problembasedsolving.tex}
-\input{indhold/learn/ResponsibilityforownlearningslashMutualresponsibilityforlearning.tex}
-\input{indhold/learn/workenvironment.tex}
-\input{indhold/learn/knowlegdesharing.tex}
-\input{indhold/learn/bloomstaxonomy.tex}
+\input{ProcessOfLearning/introlearn.tex}
+\input{ProcessOfLearning/valuesandvisionslearningprocess.tex}
+\input{ProcessOfLearning/GoalsOfThisSemester.tex}			%DONE
+\input{ProcessOfLearning/problembasedsolving.tex}
+\input{ProcessOfLearning/ResponsibilityforownlearningslashMutualresponsibilityforlearning.tex}
+\input{ProcessOfLearning/workenvironment.tex}
+\input{ProcessOfLearning/knowlegdesharing.tex}
+\input{ProcessOfLearning/bloomstaxonomy.tex}
 
 %afslut
 \input{indhold/discussionandperspektivering.tex}
@@ -90,7 +86,7 @@ Dag Toft Børresen Pedersen\\
 
 %%%% Appendiks %%%%
 
-\input{indhold/appendix/Groupcontractapp.tex}
-\input{indhold/appendix/Timescheduleapp.tex}
+\input{Appendix/GroupContractSelveKontrakten.tex}
+\input{Appendix/Timescheduleapp.tex}
 
 \end{document}
