--- a/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
@@ -65,7 +65,7 @@ Dag Toft Børresen Pedersen\\
 \input{ProcessOfLearning/introlearn.tex}
 \input{ProcessOfLearning/valuesandvisionslearningprocess.tex}
 \input{ProcessOfLearning/GoalsOfThisSemester.tex}			%DONE
-\input{ProcessOfLearning/problembasedsolving.tex}
+\input{ProcessOfLearning/ProblemBasedSolving.tex}			%DONE
 \input{ProcessOfLearning/ResponsibilityforownlearningslashMutualresponsibilityforlearning.tex}
 \input{ProcessOfLearning/workenvironment.tex}
 \input{ProcessOfLearning/knowlegdesharing.tex}
