--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/ProblemBasedSolving.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/ProblemBasedSolving.tex
@@ -1,5 +1,5 @@
 \section{Problem Based Solving}
-\label{PBS}
+\label{sec:PBS}
 The problem based solving method is used for two reasons. Firstly it is the standard work method on the University of Aalborg and secondly it is an efficient method for learning.
 This working method is also fitted for group work, because the group will have to work together and find a solution to a problem.
 
