--- a/LaTeX/Process Analysis/Skal sættes i process analysis/conclusion.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/conclusion.tex
@@ -3,4 +3,4 @@ We think that the whole project went very well. We have used the group coordinat
 
 This project is based on problem based learning, which means working with a society problem, and trying to develop a solution to the problem. This has helped us understand the context of the problem on a deeper level. We made a partner analysis, to help us aim our solution to the problem at specific types of people.
 
-Every member of the group has been doing an active part of the work in this project. Throughout the project, we have gathered new knowledge on the subject of packing a suitcase. We are already experienced in working together, as we also were working together in the first semester, and yet we have developed our skills at working together as a group. 
+Every member of the group has been doing an active part of the work in this project. Throughout the project, we have gathered new knowledge on the subject of packing a suitcase. We are already experienced in working together, as we also were working together in the first semester, and yet we have further developed our skills at working together as a group. 
