--- a/LaTeX/Process Analysis/Klar til at blive rettet anden gang/meetings.tex
+++ b/LaTeX/Process Analysis/Klar til at blive rettet anden gang/meetings.tex
@@ -1,5 +1,5 @@
 \section{Morning Meetings}
-At the beginning of each work day, we would hold a short meeting, where we discussed what each member of the group was during that day. If a member was not currently working on something, the group coordinator would that member to a task. This helped the group see the progress of the project, and also ensured that no member was doing nothing at some point.
+At the beginning of each work day, we would hold a short meeting, where we discussed what each member of the group was during that day. If a member was not currently working on something, the group coordinator would give that member a task. This helped the group see the progress of the project, and also ensured that no member was doing nothing at some point.
 
 \section{Friday Meetings}
 Each Friday we held a longer meeting where we had the following agenda:
@@ -13,7 +13,7 @@ Each Friday we held a longer meeting where we had the following agenda:
 	\item What Happens Next: What should each group member work on now.
 	\item Any Other Business: If a group member has something which needs to be discussed
 	\item Next Meeting: The date of the next meeting is decided. 
-	\item Evaluation:  The evaluation of the meeting. 
+	\item Evaluation: The evaluation of the meeting. 
 \end{enumerate}
 
 The Friday meeting helps each group member gain an overview of the project.
