--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/GroupWork/meetings.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/GroupWork/meetings.tex
@@ -1,5 +1,5 @@
 \section{Morning Meetings}
-At the beginning of each work day, we would hold a short meeting, where we discussed what each member of the group was during that day. If a member was not currently working on something, the group coordinator would give that member a task. This helped the group see the progress of the project, and also ensured that no member was doing nothing at some point.
+At the beginning of each work day, we would hold a short meeting, where we discussed what each member of the group was to do during that day. If a member was not currently working on something, the group coordinator would give that member a task. This helped the group see the progress of the project, and also ensured that no member was doing nothing at some point.
 
 \section{Friday Meetings}
 Each Friday we held a longer meeting where we had the following agenda:
@@ -16,4 +16,4 @@ Each Friday we held a longer meeting where we had the following agenda:
 	\item Evaluation: The evaluation of the meeting. 
 \end{enumerate}
 
-The Friday meeting helps each group member gain an overview of the project.
+The Friday meeting helps each group member gain an overview of the project and ensured that every member were aware of what needed to be done.
