--- a/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
@@ -1,4 +1,4 @@
-\input{preamble}
+\input{../../preamble}
 \begin{document}
 \mainmatter
 \begin{center}
@@ -33,47 +33,48 @@ Dag Toft Børresen Pedersen\\
 
 %styring
 \chapter{Projectplanning}
-\input{ProjectPlanning/introprojectplanning.tex}
+\input{ProjectPlanning/introprojectplanning.tex} %DONE
 \input{ProjectPlanning/Administration.tex} 		%DONE
 \input{ProjectPlanning/WorkCoordinating.tex}	%DONE
-\input{ProjectPlanning/timeschedule.tex}
+\input{ProjectPlanning/TimeSchedule.tex}		%DONE
 \input{ProjectPlanning/DecisionMaking.tex} 		%DONE
 
 %gruppen
 \chapter{Group Work}
-\input{GroupWork/groupintro.tex}
+\input{GroupWork/groupintro.tex}				%DONE
 \input{GroupWork/GroupContract.tex}				%DONE
-\input{GroupWork/roles.tex}
+\input{GroupWork/DivisionOfRoles.tex}			%DONE
 %\input{indhold/group/conflicthandling.tex}
-\input{GroupWork/meetingculture.tex}
-\input{GroupWork/MorningmeetingsandFridaysmeetings.tex}
-\input{GroupWork/summary.tex}
-\input{GroupWork/OBHmodellen.tex}
+\input{GroupWork/TheMeetingCulture.tex}			%DONE
+\input{GroupWork/meetings.tex}					%DONE
+\input{GroupWork/SummeryOfGroupMeetings.tex}	%DONE
+%\input{GroupWork/OBHmodellen.tex}
 
 
 
 %vejleder
 \chapter{Collaboration with Supervisors}
-\input{CollaborationWithSupervisors/introsupervisor.tex}
-\input{CollaborationWithSupervisors/supervisors.tex}
+\input{CollaborationWithSupervisors/introsupervisor.tex} %DONE
+\input{CollaborationWithSupervisors/Meetings.tex}		%DONE
+%\input{CollaborationWithSupervisors/supervisors.tex}
 
 
 
 
 %læringsprocess
 \chapter{Process of Learning}
-\input{ProcessOfLearning/introlearn.tex}
-\input{ProcessOfLearning/valuesandvisionslearningprocess.tex}
+\input{ProcessOfLearning/introlearn.tex}					%DONE
+%\input{ProcessOfLearning/valuesandvisionslearningprocess.tex}
 \input{ProcessOfLearning/GoalsOfThisSemester.tex}			%DONE
 \input{ProcessOfLearning/ProblemBasedSolving.tex}			%DONE
-\input{ProcessOfLearning/ResponsibilityforownlearningslashMutualresponsibilityforlearning.tex}
-\input{ProcessOfLearning/workenvironment.tex}
-\input{ProcessOfLearning/knowlegdesharing.tex}
-\input{ProcessOfLearning/bloomstaxonomy.tex}
+\input{ProcessOfLearning/ResponsibilityForOwnLearningMutualResponsibilityForLearning.tex}	%DONE
+\input{ProcessOfLearning/LearningStylesAndWorkEnvironment.tex} %DONE
+\input{ProcessOfLearning/knowledgesharings.tex}				   %DONE
+\input{ProcessOfLearning/BloomsTaxonomy.tex}					%DONE
 
 %afslut
-\input{indhold/discussionandperspektivering.tex}
-\input{indhold/conclusionprocessanalyse.tex}
+\input{DiscussionAndPuttngThingsIntoPerspective.tex}
+\input{conclusion.tex}							%DONE
 
 \appendix	% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
 
@@ -86,7 +87,9 @@ Dag Toft Børresen Pedersen\\
 
 %%%% Appendiks %%%%
 
-\input{Appendix/GroupContractSelveKontrakten.tex}
-\input{Appendix/Timescheduleapp.tex}
+\input{Appendix/GroupContractSelveKontrakten.tex}		%DONE
+%%TIME SCHEDULE SKAL SÆTTES IND HER %%%
+ %\input{Appendix/Timescheduleapp.tex}
+%%%
 
 \end{document}
