--- a/LaTeX/Process Analysis/Skal sættes i process analysis/intro.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/intro.tex
@@ -1,2 +1,2 @@
 \chapter{Introduction}
-The process analysis is an analysis where we reflect on the project. The analysis describes how the group have worked during the semester. In the analysis it will also be described what went well and what can be changed for the next project. The analysis will be used to figure out what was done, and what to take with us in the next project.
+The process analysis is an analysis where we reflect on the project. The analysis describes how the group have worked during the semester. In the analysis it will also be described what went well and what can be changed for the next project. The analysis will be used to figure out what was done, and what to take with us in the next project. Through this analysis it will be possible to see how we have worked this semester - how we have planned our time, and how we have used our supervisor and the contextual consultant. 
