--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
@@ -2,7 +2,7 @@
 \begin{document}
 \mainmatter
 \begin{center}
-\textbf{\HUGE Process analysis P2-project}\\
+\textbf{\HUGE Process Analysis P2-project}\\
 {\Large Group B130}\\
 University of Aalborg, Second semester, Spring 2012\\
 
@@ -33,7 +33,7 @@ Dag Toft Børresen Pedersen\\
 
 %styring
 \chapter{Projectplanning}
-\input{ProjectPlanning/introprojectplanning.tex} %DONE
+\input{ProjectPlanning/introprojectplanning.tex} 
 \input{ProjectPlanning/Administration.tex} 		%DONE
 \input{ProjectPlanning/WorkCoordinating.tex}	%DONE
 \input{ProjectPlanning/TimeSchedule.tex}		%DONE
@@ -73,7 +73,7 @@ Dag Toft Børresen Pedersen\\
 \input{ProcessOfLearning/BloomsTaxonomy.tex}					%DONE
 
 %afslut
-\input{DiscussionAndPuttngThingsIntoPerspective.tex}
+\input{DiscussionAndPuttngThingsIntoPerspective.tex}%DONE	
 \input{conclusion.tex}							%DONE
 
 \appendix	% Appendiks/bilag start - giver chapter bogstaver i stedet for tal
