--- a/LaTeX/Process Analysis/Skal sættes i process analysis/GroupWork/meetings.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/GroupWork/meetings.tex
@@ -1,5 +1,5 @@
 \section{Morning Meetings}
-At the beginning of each work day, we would hold a short meeting, where we discussed what each member of the group was to do during that day. If a member was not currently working on something, the group coordinator would give that member a task. This helped the group see the progress of the project, and also ensured that no member was doing nothing at some point.
+At the beginning of each work day, we held a short meeting, where we discussed what each group member had to do during that day. If a member was not currently working on something, the group coordinator would give that member a task. This helped the group see the progress of the project, and also ensured that no member was doing nothing at some point.
 
 \section{Friday Meetings}
 Each Friday we held a longer meeting where we had the following agenda:
