--- a/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/processanalysis.tex
@@ -33,9 +33,9 @@ Dag Toft Børresen Pedersen\\
 
 %styring
 \chapter{Projectplanning}
-\input{ProjectPlanning/introprojectplanning.tex} 
+\input{ProjectPlanning/introprojectplanning.tex} %done
 \input{ProjectPlanning/Administration.tex} 		%DONE
-\input{ProjectPlanning/WorkCoordinating.tex}	%DONE
+%\input{ProjectPlanning/WorkCoordinating.tex}	%DONE
 \input{ProjectPlanning/TimeSchedule.tex}		%DONE
 \input{ProjectPlanning/DecisionMaking.tex} 		%DONE
 
