--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/GroupWork/SummeryOfGroupMeetings.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/GroupWork/SummeryOfGroupMeetings.tex
@@ -1,4 +1,4 @@
-\section{Summery of Group Meetings}
+\section{Summary of Group Meetings}
 Summaries are made at the meetings and are made by the reporter who then saves them for later so everyone in the group has a chance for reading them. 
 The summaries are made from the agenda list and mostly consists of keywords or short lines explaining what was talked about at the meeting.
 It is a very good idea to write summaries at the meetings since everything that needs to be done in the following week will be saved. 
