--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/ResponsibilityForOwnLearningMutualResponsibilityForLearning.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/ResponsibilityForOwnLearningMutualResponsibilityForLearning.tex
@@ -1,2 +1,2 @@
 \section{Responsibility for Own Learning/Mutual Responsibility for Learning}
-In this group, we think that the lectures are very important. It is stated in the group contract (see \ref{chap:groupcontract}), that each member of this group must be present at all lectures. Because Aalborg University's projects are based on group work, we think that each group member has a responsibility for own learning. If one group member has trouble understanding something in a lecture, the other group members should help that particular member to understand. So even through we have responsibility for own learning we also have responsibility for the group and help those who seeks help. This is important for the group, to work together and help each other to understand and learn.
+In this group, we think that the lectures are very important. It is stated in the group contract (see Appendix \ref{chap:groupcontract}), that each member of this group must be present at all lectures. Because Aalborg University's projects are based on group work, we think that each group member has a responsibility for their own learning. If one group member has trouble understanding something in a lecture, the other group members should help that particular member understand it. So even though we have responsibility for our own learning we also have a responsibility to the group and to help those who seek help. This is important for the group to work together and help each other understand and learn.
