--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/introlearn.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/introlearn.tex
@@ -1,1 +1,1 @@
-This chapter is about how the group internally has shared knowledge and ensured that every member of the group has read and understood the project report. It is also about how the group has ensured learning in the different courses, how the group members have worked together, how we in the group ensured a good working environment and that all members were comfortable. The working method that we have used is described in section \ref{sec:PBS} and why we used that specific working method.
+This chapter is about how the group internally shared knowledge and ensured that every member of the group has read and understood the project report. It is also about how the group has ensured learning in the different courses, how the group members have worked together, how we in the group ensured a good working environment and that all members were comfortable. The working method that we have used is described in section \ref{sec:PBS} and why we used that specific working method.
