--- a/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProjectPlanning/introprojectplanning.tex
+++ b/trunk/LaTeX/Process Analysis/Skal sættes i process analysis/ProjectPlanning/introprojectplanning.tex
@@ -1,1 +1,1 @@
-In the following section our project planning is explained. The methods for planning a good project, which tools have been used, how it turned out, what went good, what went bad and what could have been done better. All of these are expounded.
+In this section our project planning is explained. The methods for planning a good project, which tools have been used, how it turned out, what went good, what went bad and what could have been done better. All of these are expounded.
