--- a/LaTeX/Process Analysis/Skal sættes i process analysis/CollaborationWithSupervisors/Meetings.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/CollaborationWithSupervisors/Meetings.tex
@@ -1,2 +1,2 @@
 \section{Meetings}
-We held a meeting with our supervisor every Monday, except on holidays. This ensured the group were kept on the right track, and also motivated us to continue to improve upon our project. We agreed on sending our supervisor a worksheet every Friday, and he would bring a corrected and commented edition on Monday. On the meetings we would discuss the status of our project, and come to an agreement on what we should focus on until the next meeting. In this semester we also had a consultant to help us with the contextual part of the report. We only had one meeting with the consultant, because only a limited time was allocated to this. But the meeting resulted in some interesting contextual correction, which in some way were adopted. All in all, our experience from the last project showed that if we held this weekly meeting with the supervisor, it would keep us on the right track, and it did, again. 
+We held a meeting with our supervisor every Monday, except on holidays. This ensured the group was kept on the right track, and also motivated us to continue to improve upon our project. We agreed on sending our supervisor a worksheet every Friday, and he would bring a corrected and commented edition on Monday. On the meetings we would discuss the status of our project, and come to an agreement on what we should focus on until the next meeting. In this semester we also had a consultant to help us with the contextual part of the report. We only had one meeting with the consultant, because only a limited time was allocated to this. But the meeting resulted in some interesting contextual correction, which in some way were adopted. All in all, our experience from the last project showed that if we held this weekly meeting with the supervisor, it would keep us on the right track, and it did, again. 
