--- a/LaTeX/Process Analysis/Skal sættes i process analysis/DiscussionAndPuttngThingsIntoPerspective.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/DiscussionAndPuttngThingsIntoPerspective.tex
@@ -1,4 +1,4 @@
-\chapter{Discussion and Putting Things into Perspective}
+\chapter{Retrospective}
 In this chapter we will discuss and perspective over this project and the work regarding it.
 The working time of the project was from 9:10 to 16:15 every day given that no lecture was scheduled that day. By doing this there was a high productivity in the group, but still there was time for fun. To improve the productivity, the option to work from home from 14.00 was removed when we went behind schedule.
 We did this because working in the group room meant a higher productivity in the group. One of the good features for a group is that we are social and friendly with each others because it enhances and improved the group spirit. This can be useful for work in the future - that you can work with other people and be part of a group.
