--- a/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/BloomsTaxonomy.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/BloomsTaxonomy.tex
@@ -1,3 +1,3 @@
 \section{Blooms Taxonomy}
-Bloom's taxonomy is a way to scale how good one's learning skill is, with 6 abstraction levels.
-By using the Bloom's taxonomy we can see what step we have stepped up to. The conclusion was that we made up to the 6th step, because we can evaluate this project and see what our profit is, what has been forgotten, what could we have done better etc. It can be seen in the project that we have analyzed, understood, and evaluated the problem and found a possible solution to the problem. The evaluation and conclusion on the process can be seen in the conclusion chapter in the project report.
+Bloom's taxonomy is a way to measure how good one's learning skill is, with 6 abstraction levels.
+By using Bloom's taxonomy we can see what level we have reached. The conclusion was that we made it up to the 6th level, because we could evaluate this project and see what our profit was, what has been forgotten, and what we could have done better. It can be seen in the project that we have analyzed, understood, and evaluated the problem and found a possible solution to the problem. The evaluation and conclusion on the process can be seen in the conclusion chapter in the project report.
