--- a/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/GoalsOfThisSemester.tex
+++ b/LaTeX/Process Analysis/Skal sættes i process analysis/ProcessOfLearning/GoalsOfThisSemester.tex
@@ -1,5 +1,5 @@
 \section{Goals of This Semester}
-In this semester there have been set some goals, which are meant to be reached during the semester. The goals are: 
+In this semester there has been set some goals, which are meant to be reached during the semester. The goals are as follows: 
 
 \textbf{Knowledge:} \newline
 	The student will after a completed project-module be able to:
