--- a/LaTeX/Rapport - NIX PILLE/formalia/prolog.tex
+++ b/LaTeX/Rapport - NIX PILLE/formalia/prolog.tex
@@ -1,7 +1,7 @@
 \chapter{Prolog}
 
-This project is made by Rasmus Fischer Gadensgaard, Christian Jødal O’Keeffe, Kasper Plejdrup, Aleksander Sørensen Nilsson, Niels Brøndum Pedersen, Mette Thomsen Pedersen and Dag Toft Børresen Pedersen from Denmark. The project began on the 8. of February 2012 and was finished on the 24. of March 2012, at the University of Aalborg, where the participants are studying Software.
+This project is made by Rasmus Fischer Gadensgaard, Christian Jødal O’Keeffe, Kasper Plejdrup, Aleksander Sørensen Nilsson, Niels Brøndum Pedersen, Mette Thomsen Pedersen and Dag Toft Børresen Pedersen from Denmark. The project began on the 8th of February 2012 and was finished on the 24th of March 2012, at the University of Aalborg, where the participants are studying Software.
 
-All participants chose University of Aalborg because they like the PBL model. PBL stands for Problem Based Learning and it is a unique learning method that in Denmark is only used at University of Aalborg and Roskilde University Centre.
+All participants chose University of Aalborg because they like the PBL-model. PBL stands for Problem Based Learning and it is a unique learning method which in Denmark is only used at University of Aalborg and Roskilde University Centre.
 
 The goal with this project is to give the group skills using the programming language C\# (C-Sharp), and make them better at team-work. This project is about optimizing and analysis of algorithms.
