--- a/LaTeX/Rapport - NIX PILLE/indhold/problem/thesisstatement.tex
+++ b/LaTeX/Rapport - NIX PILLE/indhold/problem/thesisstatement.tex
@@ -1,23 +1,23 @@
 \section{Problem Statement}
 \label{sec:thesis}
-In this section a problem statement will be formulated which will be used to develop a solution to the problem of this project. The problem statement is used to get a more precise problem to work with. The solution is used to try and solve the problem stated in the problem statement.
+In this section a problem statement will be formulated which will be used for developing a solution to the problem of this project. The problem statement is used to get a more precise problem to work with. The solution is used in order to try solving the problem stated in the problem statement.
 
-The problem analyses shows that there are two general types of programs on the market. One type is a form of a packing list that tells the user what they might want to pack, the other type of program is a packing program which packs containers for the user and calculates the shipping cost to a designated location. These two types of programs only fulfills parts of the criteria this project has put forward. With this in mind a problem statement has been formulated to help shape the solution for this projects problem.
+The problem analysis shows that there are two general types of programs on the market. One type is a form of packing list which tells the users what they might want to pack, the other type of program is a packing program which packs containers for the users and calculates the shipping cost to a designated location. These two types of programs only fulfill, parts of the criteria this project has put forward. With this in mind a problem statement has been formulated to help shape the solution for this project's problem.
 
 \begin{itemize}
 \item \textbf{How can a program be developed which helps the customer through the process of packing one or more suitcases the most effective way by size and weight?}
 \end{itemize}
 
 The meaning of this problem statement is to research and develop a program that in some way could handle the problem, but the user also plays a role in the problem.
-Therefore the user must also be taken into account when the program is being developed. The reason for this is to make the program as user friendly as possible.
+Therefore, the user must also be taken into account when the program is being developed. The reason for this is to make the program as user friendly as possible.
 
 \subsection{Sub Statements}
-The sub statements have been made to help find a solution to the problem statement. These sub statements describe some of the steps that need to be made in order to find the solution for the problem statement.
+The sub statements have been made to help find a solution to the problem statement. These sub statements describe some of the steps which need to be made in order to find the solution for the problem statement.
 
 \begin{itemize}
-\item \textbf{How can it be checked that the weight in the suitcases are evenly distributed and does not exceed the allowed weight or the volume in the bag?}
+\item \textbf{How can it be checked that the weight in the suitcases is evenly distributed and does not exceed the allowed weight or the volume in the bag?}
 
-The program will need to handle and solve calculations with weight and volume. Through these algorithms the program should find the most effective solution for the given data. It will also have to check that the solutions weight does not exceed the given limits or the volume of the luggage as found out in Section \ref{sec:LugRules}.
+The program will need to handle and solve calculations with weight and volume. Through these algorithms the program should find the most effective solution for the given data. It will also have to check that the weight of the solutions does not exceed the given limits or the volume of the luggage as found out in Section \ref{sec:LugRules}.
 
 \item \textbf{Which algorithms are needed to get the program to compute the most effective way to fit the items into the suitcases?}
 
